config: default simple_collision_enabled to true

--- a/data/config/autopilot_manager.conf
+++ b/data/config/autopilot_manager.conf
@@ -1,6 +1,7 @@
 [AutopilotManagerConfig]
 autopilot_manager_enabled=true
 decision_maker_input_type=SIMPLE_COLLISION_AVOIDANCE
+simple_collision_enabled=true
 simple_collision_avoid_distance_threshold=3.0
 simple_collision_avoid_distance_on_condition_true=HOLD
 simple_collision_avoid_distance_on_condition_false=KEEP_STATE
