update CUSTOM_ACTION_DATA_DIR description

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ install(
 
 # Install custom action JSON examples and dummy scripts
 # Note: the default directory is specific to the AuterionOS
-set(CUSTOM_ACTION_DATA_DIR "/usr/src/app/autopilot-manager/data" CACHE FILEPATH "Path to custom action JSON examples and scripts")
+set(CUSTOM_ACTION_DATA_DIR "/usr/src/app/autopilot-manager/data" CACHE FILEPATH "Path to configuration filed, custom action configuration examples and scripts")
 # set(CUSTOM_ACTION_DATA_DIR "/usr/local/share/autopilot-manager/data" CACHE FILEPATH "Path to custom action JSON examples and scripts")
 
 install(DIRECTORY data/
