first commit to support ROS 2 and include the Sensor Manager in the Autopilot Manager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,9 @@ cmake_minimum_required(VERSION 3.10.2)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-project(autopilot_manager)
+project(autopilot-manager)
 
+find_package(ament_cmake REQUIRED)
 find_package(Threads REQUIRED)
 find_package(PkgConfig REQUIRED)
 pkg_search_module(GLIB REQUIRED glib-2.0)
@@ -19,10 +20,17 @@ else()
     add_definitions("-WX -W2")
 endif()
 
-include_directories(include src/modules src/helpers)
+include_directories(
+  include
+  src/modules
+  src/modules/mission_manager
+  src/modules/sensor_manager
+  src/helpers
+)
 
 add_subdirectory(src/helpers)
-add_subdirectory(src/modules)
+add_subdirectory(src/modules/mission_manager)
+add_subdirectory(src/modules/sensor_manager)
 
 add_executable(
     autopilot-manager
@@ -34,10 +42,9 @@ add_executable(
 
 target_link_libraries(
     autopilot-manager
-    PUBLIC
     mission-manager
+    sensor-manager
     helpers
-    PRIVATE
     Threads::Threads
     ${GLIB_LDFLAGS}
     ${DBUS_LIBRARIES}
@@ -55,9 +62,14 @@ target_include_directories(autopilot-manager
 # Install autopilot-manager
 install(
   TARGETS autopilot-manager
-  ARCHIVE DESTINATION lib
-  RUNTIME DESTINATION bin
+  ARCHIVE DESTINATION lib/${PROJECT_NAME}
+  RUNTIME DESTINATION bin/${PROJECT_NAME}
   LIBRARY DESTINATION lib
+  INCLUDES DESTINATION include
+)
+install(TARGETS autopilot-manager
+  DESTINATION
+  lib/${PROJECT_NAME}
 )
 
 # Install custom action JSON examples and dummy scripts
@@ -68,11 +80,13 @@ set(CUSTOM_ACTION_DATA_DIR "/usr/src/app/autopilot-manager/data/example/" CACHE 
 set(CONFIG_DATA_DIR "/shared_container_dir/" CACHE FILEPATH "Path to autopilot manager configuration file")
 # set(CUSTOM_ACTION_DATA_DIR "/usr/local/share/autopilot-manager/data/config/" CACHE FILEPATH "Path to autopilot manager configuration file")
 
-install(DIRECTORY data/example/
-  DESTINATION ${CUSTOM_ACTION_DATA_DIR})
+# install(DIRECTORY data/example/
+#   DESTINATION ${CUSTOM_ACTION_DATA_DIR})
+#
+# install(DIRECTORY data/config/
+#   DESTINATION ${CONFIG_DATA_DIR})
+#
+# install(FILES com.auterion.autopilot_manager.conf
+#   DESTINATION /usr/share/dbus-1/system.d/)
 
-install(DIRECTORY data/config/
-  DESTINATION ${CONFIG_DATA_DIR})
-
-install(FILES com.auterion.autopilot_manager.conf
-  DESTINATION /usr/share/dbus-1/system.d/)
+ament_package()
