--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,12 @@
 Source: autopilot-manager
-Section: unknown
+Section: misc
 Priority: optional
 Maintainer: Nuno Marques <nuno@auterion.com>
-Build-Depends:  cmake
-Standards-Version: 4.1.3
-Homepage: https://github.com/Auterion/autopilot_manager
+Build-Depends: debhelper (>= 9.0.0), libeigen3-dev, ros-foxy-ament-cmake, ros-foxy-builtin-interfaces, ros-foxy-eigen3-cmake-module, ros-foxy-rclcpp, ros-foxy-ros-environment, ros-foxy-sensor-msgs
+Homepage: 
+Standards-Version: 3.9.2
 
 Package: autopilot-manager
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: autopilot-manager
- A service for higher level interactivity with onboard and flight controller components, using Auterion SDKs and MAVSDK.
+Depends: ${shlibs:Depends}, ${misc:Depends}, libeigen3-dev, ros-foxy-builtin-interfaces, ros-foxy-eigen3-cmake-module, ros-foxy-rclcpp, ros-foxy-ros-environment, ros-foxy-rosidl-default-runtime, ros-foxy-sensor-msgs
+Description: Autopilot Manager
