fix CI, changing mavsdk develop branch to main branch

--- a/.github/workflows/build_pkg_multi_arch.yml
+++ b/.github/workflows/build_pkg_multi_arch.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Build & Packaging (autopilot_manager)
         run: |
           # Clone MAVSDK to be built from source
-          git clone --recursive https://github.com/Auterion/MAVSDK.git -b develop /tmp/MAVSDK
+          git clone --recursive https://github.com/Auterion/MAVSDK.git -b main /tmp/MAVSDK
           # Add COLCON_IGNORE to the MAVSDK dir so colcon doesn't build it
           touch /tmp/MAVSDK/COLCON_IGNORE
           # Run cross-compilation
