--- a/src/modules/landing_manager/CMakeLists.txt
+++ b/src/modules/landing_manager/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(sensor_manager)
+project(landing_manager)
 
 # Default to C++17
 if(NOT CMAKE_CXX_STANDARD)
@@ -12,7 +12,6 @@ endif()
 
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(sensor_msgs REQUIRED)
 
 find_package(PythonInterp 3 REQUIRED)
 find_package(eigen3_cmake_module REQUIRED)
@@ -23,18 +22,17 @@ find_package(Eigen3 REQUIRED NO_MODULE)
 # Setup targets #
 #################
 
-add_library(sensor-manager SHARED SensorManager.cpp)
-ament_target_dependencies(sensor-manager Eigen3 sensor_msgs)
-target_include_directories(sensor-manager PUBLIC
+add_library(landing-manager SHARED LandingManager.cpp)
+ament_target_dependencies(landing-manager Eigen3)
+target_include_directories(landing-manager PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}>
   $<INSTALL_INTERFACE:include/autopilot-manager/${PROJECT_NAME}>
   ${Eigen3_INCLUDE_DIRS}
   ${rclcpp_INCLUDE_DIRS}
 )
-target_link_libraries(sensor-manager
+target_link_libraries(landing-manager
   Eigen3::Eigen
   ${rclcpp_LIBRARIES}
-  ${sensor_msgs_LIBRARIES}
 )
 
 ############
@@ -42,20 +40,20 @@ target_link_libraries(sensor-manager
 ############
 
 # Export information to downstream packages
-ament_export_dependencies(ament_cmake rclcpp eigen3_cmake_module Eigen3 sensor_msgs)
-ament_export_targets(export_sensor-manager HAS_LIBRARY_TARGET)
+ament_export_dependencies(ament_cmake rclcpp eigen3_cmake_module Eigen3)
+ament_export_targets(export_landing-manager HAS_LIBRARY_TARGET)
 
 ament_export_include_directories(include)
-ament_export_libraries(sensor-manager)
+ament_export_libraries(landing-manager)
 
 # Install header files
-install(FILES SensorManager.hpp
+install(FILES LandingManager.hpp
         DESTINATION include/autopilot-manager
 )
 
 # Install artifacts
-install(TARGETS sensor-manager
-        EXPORT export_sensor-manager
+install(TARGETS landing-manager
+        EXPORT export_landing-manager
         ARCHIVE DESTINATION lib
         LIBRARY DESTINATION lib
         RUNTIME DESTINATION bin
