CollisionAvoidanceManager: move distance to obstacle computation from the Sensor Manager
Also, brings the initial setup to easily add the downsampling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ endif()
 include_directories(
   include
   src/modules
+  src/modules/collision_avoidance_manager
   src/modules/landing_manager
   src/modules/mission_manager
   src/modules/sensor_manager
@@ -35,6 +36,7 @@ include_directories(
 )
 
 add_subdirectory(src/helpers)
+add_subdirectory(src/modules/collision_avoidance_manager)
 add_subdirectory(src/modules/landing_manager)
 add_subdirectory(src/modules/mission_manager)
 add_subdirectory(src/modules/sensor_manager)
@@ -49,6 +51,7 @@ add_executable(
 
 target_link_libraries(
     autopilot-manager
+    collision-avoidance-manager
     landing-manager
     mission-manager
     sensor-manager
