--- a/.github/workflows/build_pkg_multi_arch.yml
+++ b/.github/workflows/build_pkg_multi_arch.yml
@@ -69,13 +69,19 @@ jobs:
           git clone --recursive https://github.com/Auterion/MAVSDK.git -b main /tmp/MAVSDK
           # Add COLCON_IGNORE to the MAVSDK dir so colcon doesn't build it
           touch /tmp/MAVSDK/COLCON_IGNORE
+          # Add source dependencies
+          git clone https://gitlab.com/libeigen/eigen.git -b 3.3.9 /tmp/colcon_ws/src/eigen
+          git clone git@github.com:Auterion/image_downsampler.git /tmp/colcon_ws/src/image_downsampler
+          git clone git@github.com:Auterion/landing_mapper.git -b develop /tmp/colcon_ws/src/landing_mapper
+          git clone git@github.com:Auterion/px4_msgs.git -b develop /tmp/colcon_ws/src/px4_msgs
           # Run cross-compilation
           ros_cross_compile /tmp/colcon_ws \
             --arch ${{ matrix.arch }} \
             --os ubuntu \
             --rosdistro ${{ matrix.ros2_distro }} \
             --custom-setup-script scripts/cross_compile_dependencies.sh \
-            --custom-data-dir /tmp/MAVSDK
+            --custom-data-dir /tmp/MAVSDK \
+            --skip-rosdep-keys Eigen3 image_downsampler landing_mapper px4_msgs px4_ros_com
       - name: Create zip
         run: |
           cd /tmp/colcon_ws/install_${{ matrix.arch }}
