--- a/package.xml
+++ b/package.xml
@@ -13,21 +13,21 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>eigen3_cmake_module</buildtool_depend>
 
-  <build_depend>eigen</build_depend>
+  <build_depend>Eigen3</build_depend>
 
-  <depend>rclcpp</depend>
-  <depend>sensor_msgs</depend>
   <depend>image_downsampler</depend>
   <depend>landing_mapper</depend>
-  <depend>tbb</depend>
   <depend>px4_msgs</depend>
+  <depend>rclcpp</depend>
+  <depend>sensor_msgs</depend>
+  <depend>tbb</depend>
   <depend>tf2_ros</depend>
   <depend>visualization_msgs</depend>
 
-  <exec_depend>rosidl_default_runtime</exec_depend>
+  <exec_depend>px4_ros_com</exec_depend>
 
   <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
-  <build_export_depend>eigen</build_export_depend>
+  <build_export_depend>Eigen3</build_export_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
