extend with the new parameters coming from the dbus parameter transaction
Makes those parameters avaliable to the different modules

--- a/data/config/autopilot_manager.conf
+++ b/data/config/autopilot_manager.conf
@@ -1,7 +1,25 @@
 [AutopilotManagerConfig]
 autopilot_manager_enabled=1
 decision_maker_input_type=SAFE_LANDING
+script_to_call=
+api_call=
+local_position_offset_x=0.0
+local_position_offset_y=0.0
+local_position_offset_z=0.0
+local_position_waypoint_x=0.0
+local_position_waypoint_y=0.0
+local_position_waypoint_z=0.0
+global_position_offset_lat=0.0
+global_position_offset_lon=0.0
+global_position_offset_alt_amsl=0.0
+global_position_waypoint_lat=0.0
+global_position_waypoint_lon=0.0
+global_position_waypoint_alt_amsl=0.0
+safe_landing_enabled=0
+safe_landing_area_square_size=2.0
+safe_landing_distance_to_ground=10.0
+safe_landing_on_no_safe_land=HOLD
+safe_landing_try_landing_after_action=0
 simple_collision_avoid_enabled=0
 simple_collision_avoid_distance_threshold=5.000000
-simple_collision_avoid_distance_on_condition_true=LAND
-simple_collision_avoid_distance_on_condition_false=KEEP_STATE
+simple_collision_avoid_action_on_condition_true=LAND
