--- a/data/config/autopilot_manager.conf
+++ b/data/config/autopilot_manager.conf
@@ -12,14 +12,14 @@ local_position_waypoint_z=0.0
 global_position_offset_lat=0.0
 global_position_offset_lon=0.0
 global_position_offset_alt_amsl=0.0
-global_position_waypoint_lat=0.0
-global_position_waypoint_lon=0.0
-global_position_waypoint_alt_amsl=0.0
-safe_landing_enabled=0
+global_position_waypoint_lat=47.3557330
+global_position_waypoint_lon=8.5189327
+global_position_waypoint_alt_amsl=425.0
+safe_landing_enabled=1
 safe_landing_area_square_size=2.0
 safe_landing_distance_to_ground=10.0
-safe_landing_on_no_safe_land=HOLD
-safe_landing_try_landing_after_action=0
+safe_landing_on_no_safe_land=GO_TO_WAYPOINT
+safe_landing_try_landing_after_action=1
 simple_collision_avoid_enabled=0
 simple_collision_avoid_distance_threshold=5.000000
 simple_collision_avoid_action_on_condition_true=LAND
