Landing Manager: publish the landing state to ROS as a std_msgs/Bool message

--- a/package.xml
+++ b/package.xml
@@ -20,6 +20,7 @@
   <depend>px4_msgs</depend>
   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
+  <depend>std_msgs</depend>
   <depend>tbb</depend>
   <depend>tf2_ros</depend>
   <depend>visualization_msgs</depend>
